<resources>
    <string name="app_name">IPLKnockout</string>

    <string name="welcome">Welcome To IPLKnockout!</string>
    <string name="continue_txt">Continue -></string>
    <string name="add_txt">add</string>
    <string name="continue_with_default">Would you like to continue with the default teams?</string>
    <string name="create_own_teams">Would you like to create your own teams? Number of teams should be one from 2, 4, 8, 16, 32 … Series</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="text_0">0</string>

    <string name="error_1">Not a valid team name!</string>
    <string name="error_2">Team count can not be 0 or an odd Number!</string>
    <string name="error_3">Team name is already exist!</string>

    <string name="success_1">A new Team got added!</string>

    <string name="first_position">1st Position</string>
    <string name="second_position">2nd Position</string>
    <string name="third_position">3rd Position</string>

    <string name="third_position_note">Would you like to initiate a match for 3rd position between the two defeated semi-finalists?</string>
    <string name="ok">OK</string>
    <string name="ignore">Ignore</string>

    <string name="start_ipl">Start IPL</string>
    <string name="restart">Restart</string>
    <string name="simulate">Simulate</string>
    <string name="simulate_and_end">Simulate And End</string>
    <string name="cancel">Cancel</string>

    <string name="simulate_for_third_position">Simulate For 3rd Position</string>

    <string name="team_one">Team One</string>
    <string name="vs">vs</string>
    <string name="team_two">Team Two</string>

    <string name="divider">-------------------------</string>
</resources>