<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TeamCreationActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/purple_500"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_marginTop="@dimen/_40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:src="@drawable/logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/final_list_layout"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/own_team_text"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/create_own_teams"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/create_team_edittext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/create_team_edittext"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:hint="@string/enter_team_name"
            android:lines="1"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/own_team_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/team_counter"
            app:layout_constraintBottom_toTopOf="@+id/continue_own"/>

        <TextView
            android:id="@+id/team_counter"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/text_0"
            android:textColor="@color/purple_700"
            app:layout_constraintTop_toTopOf="@+id/create_team_edittext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/create_team_edittext"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_own"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/continue_txt"
            android:enabled="false"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/create_team_edittext"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_own"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10dp"
            android:text="@string/add_txt"
            android:enabled="false"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/create_team_edittext"
            app:layout_constraintRight_toLeftOf="@+id/continue_own"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/continue_text"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/continue_with_default"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/continue_default"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_default"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_40dp"
        android:text="@string/continue_txt"
        android:enabled="false"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>