<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="@dimen/_12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp">

            <TextView
                android:id="@+id/first_team"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:text="@string/team_one"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/purple_500"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/first_vs_second"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/first_vs_second"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginBottom="@dimen/_5dp"
                app:layout_constraintBottom_toTopOf="@+id/second_team"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_team" />

            <TextView
                android:id="@+id/second_team"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:text="@string/team_two"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/purple_500"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_vs_second" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/last_view"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>